--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     기회를 발견하고 특별한 의미를 찾아내어 새로운 디자인을 하고 싶습니다. <br> <br>
                 </p>
                 <p>
-                    사용자의 불편함을 해소하고 늘 역지사지의 마음으로 생각하는 디자이너가 <br>
-                    되겠습니다. 모든일을 성실히 긍정적인 마음으로 일하는 디자이너가 되겠습니다. <br>
+                    사용자의 불편함을 해소하고 늘 역지사지의 마음으로 생각하는 디자이너 <br>
+                    가 되겠습니다. 모든일을 성실히 긍정적인 마음으로 일하는 디자이너가 되겠습니다. <br>
                 </p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
                 <div class="h-50"></div>
