--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
                 <h3>모든 일을 긍정적 생각하는 디자이너 엄정용입니다.</h3>
                 
                 <p>
-                    사회생활을 하면서 제일중요한 덕목이 첫째는 성실함이고<br> 
-                    두번째는 긍정적인 마인드라고 생각합니다. <br>
-                    저는 장애가 있습니다. 그래서 긍정적으로 보는 마인드를 키우 <br>
-                    려고 많은 노력을 하고 있습니다. 매사를 긍정적으로 보면 무슨 <br>
-                    일이든 잘 풀리면서 더 잘하려고 하는 노력이 생겨납니다. <br><br> 
+                    사회생활을 하면서 제일중요한 덕목이 첫째는 성실함이고
+                    두번째는 긍정적인 마인드라고 생각합니다. 
+                    저는 장애가 있습니다. 그래서 긍정적으로 보는 마인드를 키우 
+                    려고 많은 노력을 하고 있습니다. 매사를 긍정적으로 보면 무슨 
+                    일이든 잘 풀리면서 더 잘하려고 하는 노력이 생겨납니다. <br><br>
                 </p>
                 <p>
-                    디자이너는 긍정적인 마인드로 문제를 해결하기도 하고 자극과 <br>
-                    영감을 받기도 합니다. 긍정적인 마인드를 가지고 일상의 숨겨져있는 <br>
-                    기회를 발견하고 특별한 의미를 찾아내어 새로운 디자인을 하고 싶습니다. <br> <br>
+                    디자이너는 긍정적인 마인드로 문제를 해결하기도 하고 자극과 
+                    영감을 받기도 합니다. 긍정적인 마인드를 가지고 일상의 숨겨져있는 
+                    기회를 발견하고 특별한 의미를 찾아내어 새로운 디자인을 하고 싶습니다. <br><br> 
                 </p>
                 <p>
-                    사용자의 불편함을 해소하고 늘 역지사지의 마음으로 생각하는 디자이너 <br>
-                    가 되겠습니다. 모든일을 성실히 긍정적인 마음으로 일하는 디자이너가 되겠습니다. <br>
+                    사용자의 불편함을 해소하고 늘 역지사지의 마음으로 생각하는 디자이너
+                    가 되겠습니다. 모든일을 성실히 긍정적인 마음으로 일하는 디자이너가 되겠습니다. <br><br>
                 </p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
                 <div class="h-50"></div>
@@ -161,7 +161,7 @@
                                                 <div class="item_info">
                                                     <!-- <h3>Brand1</h3>
                                                     <p>Brand1 간단 설명</p> -->
-                                                    <p><a href="./guide/bibx_guide.html" target="_blank" class="project_btn">BI&amp;BX Guide</a></p>
+                                                    <p><a href="./guide/BIBX_guide.html" target="_blank" class="project_btn">BI&amp;BX Guide</a></p>
                                                     <!-- <div class="project_btn_box">
                                                         <a href="#" target="_blank" class="project_btn">BI&amp;BX
                                                             Guide</a>
@@ -224,7 +224,7 @@
                                                 <div class="item_info">
                                                     <!-- <h3>Brand1</h3>
                                                     <p>Brand1 간단 설명</p> -->
-                                                    <p><a href="https://um-y.github.io/cafemori/" target="_blank" class="project_btn">Web Site</a></p>
+                                                    <p><a href="./web_site/index.html" target="_blank" class="project_btn">Web Site</a></p>
                                                     <!-- <div class="project_btn_box">
                                                         <a href="#" target="_blank" class="project_btn">BI&amp;BX
                                                             Guide</a>
@@ -256,7 +256,7 @@
                                                 <div class="item_info">
                                                     <!-- <h3>Brand2</h3>
                                                     <p>Brand2 간단 설명</p> -->
-                                                    <p><a href="./ebook/samples/basic/index.html" target="_blank" class="project_btn">E-Book</a></p>
+                                                    <p><a href="./Ebook/samples/basic/index.html" target="_blank" class="project_btn">E-Book</a></p>
                                                     <!-- <div class="project_btn_box">
                                                         <a href="#" target="_blank" class="project_btn">BI&amp;BX
                                                             Guide</a>
