--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </p>
                 <p>
                     사용자의 불편함을 해소하고 늘 역지사지의 마음으로 생각하는 디자이너
-                    가 되겠습니다. 모든일을 성실히 긍정적인 마음으로 일하는 디자이너가 되겠습니다. <br><br>
+                    가 되겠습니다. 모든일을 성실히 긍정적인 마음으로 일하는 디자이너가 되겠습니다. 
                 </p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
                 <div class="h-50"></div>
