--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="bg-3"><img src="./img/bg-3.png" alt="bg"></div>
     <div class="bg-4"><img src="./img/bg-4.png" alt="bg"></div>
     <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-    <h4 class="text-h4" data-aos="fade-down" data-stellar-background-ratio="0.5">2004</h4>
+    <h4 class="text-h4" data-aos="fade-down" data-stellar-background-ratio="0.5">2024</h4>
 </div>
 </div>
     <!-- home -->
@@ -161,7 +161,7 @@
                                                 <div class="item_info">
                                                     <!-- <h3>Brand1</h3>
                                                     <p>Brand1 간단 설명</p> -->
-                                                    <p><a href="./guide/bibx_guide.html" target="_blank" class="project_btn">BI&amp;BX Guide</a></p>
+                                                    <p><a href="guide/bibx_guide.html" target="_blank" class="project_btn">BI&amp;BX Guide</a></p>
                                                     <!-- <div class="project_btn_box">
                                                         <a href="#" target="_blank" class="project_btn">BI&amp;BX
                                                             Guide</a>
@@ -193,7 +193,7 @@
                                                 <div class="item_info">
                                                     <!-- <h3>Brand2</h3>
                                                     <p>Brand2 간단 설명</p> -->
-                                                    <p><a href="./guide/web_guide.html" target="_blank" class="project_btn">Web Guide</a></p>
+                                                    <p><a href="guide/web_guide.html" target="_blank" class="project_btn">Web Guide</a></p>
                                                     <!-- <div class="project_btn_box">
                                                         <a href="#" target="_blank" class="project_btn">BI&amp;BX
                                                             Guide</a>
@@ -256,7 +256,7 @@
                                                 <div class="item_info">
                                                     <!-- <h3>Brand2</h3>
                                                     <p>Brand2 간단 설명</p> -->
-                                                    <p><a href="./ebook/samples/basic/index.html" target="_blank" class="project_btn">E-Book</a></p>
+                                                    <p><a href="ebook/samples/basic/index.html" target="_blank" class="project_btn">E-Book</a></p>
                                                     <!-- <div class="project_btn_box">
                                                         <a href="#" target="_blank" class="project_btn">BI&amp;BX
                                                             Guide</a>
